[gd_scene load_steps=15 format=2]

[ext_resource path="res://scenes/sentry.gd" type="Script" id=1]
[ext_resource path="res://platformer-pack-redux-360-assets/PNG/Players/128x256/Yellow/alienYellow_walk1.png" type="Texture" id=2]
[ext_resource path="res://platformer-pack-redux-360-assets/PNG/Players/128x256/Yellow/alienYellow_walk2.png" type="Texture" id=3]
[ext_resource path="res://platformer-pack-redux-360-assets/PNG/Players/128x256/Yellow/alienYellow_jump.png" type="Texture" id=4]
[ext_resource path="res://platformer-pack-redux-360-assets/PNG/Players/128x256/Yellow/alienYellow_stand.png" type="Texture" id=5]
[ext_resource path="res://platformer-pack-redux-360-assets/PNG/Particles/fireball.png" type="Texture" id=6]
[ext_resource path="res://platformer-pack-redux-360-assets/PNG/Particles/fireball3.png" type="Texture" id=7]
[ext_resource path="res://platformer-pack-redux-360-assets/PNG/Particles/fireball2.png" type="Texture" id=8]
[ext_resource path="res://platformer-pack-redux-360-assets/PNG/Particles/fireball4.png" type="Texture" id=9]
[ext_resource path="res://scenes/fireball.gd" type="Script" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 470.956, 551.975 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "move",
"speed": 6.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ) ],
"loop": false,
"name": "hit",
"speed": 3.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "stand",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=3]
radius = 19.5984

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 8 ), ExtResource( 7 ), ExtResource( 9 ) ],
"loop": true,
"name": "move",
"speed": 10.0
}, {
"frames": [  ],
"loop": true,
"name": "stoped",
"speed": 5.0
} ]

[node name="sentry" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1.52436, 56.0777 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 3.99661, -9 )
frames = SubResource( 2 )
animation = "move"
playing = true

[node name="fireball" type="Area2D" parent="."]
script = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="fireball"]
position = Vector2( 3.05176e-05, 38.956 )
shape = SubResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="fireball"]
position = Vector2( 5.99326, 38.956 )
frames = SubResource( 4 )
animation = "move"
frame = 2
playing = true
[connection signal="body_entered" from="." to="." method="_on_sentry_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_sentry_body_exited"]
[connection signal="body_entered" from="fireball" to="." method="_on_fireball_body_entered"]
